Additional table for book images created now. Class hiererchy for filters modified. BookImage entity created. Book DTO not implemented yet. Need to implement books' and authors' creation.
