# src/main/java/com/example/booksserver/entity/Book.java
@@ -1,15 +1,18 @@
 package com.example.booksserver.entity;
 
+import com.example.booksserver.entity.image.BookImage;
 import jakarta.persistence.*;
 import lombok.*;
 
+import java.util.ArrayList;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 @Entity
 @NoArgsConstructor
 @AllArgsConstructor
-@Getter @Setter @ToString
+@Getter @Setter
 public class Book {
     @Id
     @GeneratedValue(strategy = GenerationType.AUTO)
@@ -20,9 +23,10 @@ public class Book {
     private long price;
     private int releaseYear;
 
-    private String imageSrc;
-
     @ManyToMany(cascade = CascadeType.ALL)
     @JoinTable
     private Set<Author> authors = new HashSet<>();
+
+    @OneToMany(cascade = CascadeType.ALL, mappedBy = "book")
+    private List<BookImage> images = new ArrayList<>();
 }
