# src/main/java/com/example/booksserver/userstate/UserBook.java
@@ -2,7 +2,12 @@ package com.example.booksserver.userstate;
 
 import com.example.booksserver.entity.Author;
 import com.example.booksserver.entity.Book;
+import com.example.booksserver.entity.image.BookImage;
+import com.example.booksserver.entity.image.ImageType;
 import lombok.Getter;
+
+import java.util.ArrayList;
+import java.util.List;
 
 @Getter
 public class UserBook {
@@ -11,16 +16,9 @@ public class UserBook {
     private final Iterable<String> authors;
     private final double price;
     private final int releaseYear;
-    private final String imageSrc;
 
-    public UserBook(long id, String name, Iterable<String> author, long price, int releaseYear, String imageSrc) {
-        this.id = id;
-        this.name = name;
-        this.authors = author;
-        this.price = price / 100.0;
-        this.releaseYear = releaseYear;
-        this.imageSrc = imageSrc;
-    }
+    // is not final because of constructor processing
+    private String mainImage;
 
     public UserBook(Book book) {
         this.id = book.getId();
@@ -28,6 +26,14 @@ public class UserBook {
         this.authors = book.getAuthors().stream().map(Author::getName).toList();
         this.price = book.getPrice() / 100.0;
         this.releaseYear = book.getReleaseYear();
-        this.imageSrc = book.getImageSrc();
+
+        // set images ??bad solution??
+        // a single main image always exists for any book
+        for (BookImage image : book.getImages()) {
+            if (image.getType() == ImageType.MAIN) {
+                this.mainImage = image.getSource();
+                break;
+            }
+        }
     }
 }
